# rocky

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  astro.config.mjs  generate_slides.py  package.json  pixi.toml  wrangler.jsonc
.github/workflows/: hit-webhook.yaml  rebuild-docs-site.yaml  rebuild-slides.yaml  rebuild-website.yaml  test.yaml
include/rocky/: arena.h  cli.h  debug.h  jit.h  main.h  math.h  sema.h  symtable.h
include/rocky/debug/: debug.h
include/rocky/lexer/: lexer.c  lexer.h  token.h
include/rocky/parser/: ast.h  nodes.h  parser.h
include/rocky/parser/sema/: sema.h  symtable.h
src/: cli.c  debug.c  jit.c  lexer.c  lib.typ  main.c  math.c  parser.c  sema.c  symtable.c  test.c
src/0-initial-issues/: 02-intro.typ  03-grammar.typ  main.typ
src/1-community-kickoff/: 01-welcome.typ  04-how-we-work.typ  06-how-we-work.typ  09-the-project.typ  12-dev-setup.typ  13-dev-setup.typ  14-dev-setup.typ  15-dev-setup.typ  17-issues.typ  18-issues.typ  lib.typ  main.typ
src/debug/: debug.c
src/grammar/: ebnf.typ  grammar.typ  main.typ
src/helpful-resources/: 02-index.typ  03-lexing.typ  04-parsing.typ  05-syntax.typ  06-syntax-analysis.typ  07-llvm.typ  08-llvm-ir.typ  09-jit-compilation.typ  10-llvm-jit-apis.typ  11-expressions.typ  12-conditionals.typ  13-loops.typ  14-mutable-variables.typ  15-extern.typ  16-pointers-and-types.typ  17-arrays-and-structs.typ  18-memory-management.typ  19-end.typ  main.typ
src/layouts/: Default.astro
src/pages/: docs.astro  index.astro  slides.astro
src/pages/docs/: [...doc].astro
src/scripts/: build-docs.ts
src/session-1/: 02-welcome.typ  03-welcome.typ  04-how-we-work.typ  05-how-we-work.typ  07-how-we-work.typ  08-the-project.typ  10-the-project.typ  13-dev-setup.typ  15-dev-setup.typ  16-issues.typ  main.typ  test.typ
tests/: README.md  arena.c  cli.c  lexer.c  parser.c
tests/core/: test_main.c  test_math.c
tests/lit/: lit.cfg.py
tests/lit/ast/: ast_binary.rocky  ast_literals.rocky
tests/lit/ir/: add.rocky
tests/lit/sema/: dump_symtable.rocky
tools/: fake_parser.c  git-clang-format  git-clang-format.cmd  git-clang-tidy  git-clang-tidy.cmd
